[gd_scene load_steps=12 format=3 uid="uid://bor3fccmjyba8"]

[ext_resource type="Script" uid="uid://c0jioo225u8ho" path="res://Scripts/tower.gd" id="1_csjfd"]
[ext_resource type="PackedScene" uid="uid://cffw0xosd5blx" path="res://Scenes/drag_component.tscn" id="2_tj53t"]
[ext_resource type="PackedScene" uid="uid://5ottdje5cq8n" path="res://Scenes/attack_component.tscn" id="3_1rked"]
[ext_resource type="PackedScene" uid="uid://ccbghg4upj1re" path="res://Scenes/range_component.tscn" id="4_gki7q"]
[ext_resource type="Texture2D" uid="uid://baviy2r0r3yt2" path="res://Assets/ShopSprites/Cat2.png" id="5_csjfd"]
[ext_resource type="Texture2D" uid="uid://4ixi6xf3vkth" path="res://Assets/TowerSprites/Percy/FrontPercy.png" id="7_4efmi"]
[ext_resource type="Texture2D" uid="uid://b8n36817txrmn" path="res://Assets/TowerSprites/Percy/BackPercy.png" id="7_8o3au"]
[ext_resource type="Texture2D" uid="uid://dwe0hummhicek" path="res://Assets/TowerSprites/Percy/catgun.png" id="7_xg0ro"]

[sub_resource type="AtlasTexture" id="AtlasTexture_8o3au"]
atlas = ExtResource("7_8o3au")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eduxq"]
atlas = ExtResource("7_4efmi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_gki7q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o3au")
}],
"loop": true,
"name": &"idlebackward",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eduxq")
}],
"loop": true,
"name": &"idleforward",
"speed": 5.0
}]

[node name="Percy" type="Node2D"]
script = ExtResource("1_csjfd")
tower_name = "Percy"
cost = 250
metadata/_custom_type_script = "uid://c0jioo225u8ho"

[node name="DragComponent" parent="." node_paths=PackedStringArray("parent_node") instance=ExtResource("2_tj53t")]
parent_node = NodePath("..")

[node name="AttackComponent" parent="." node_paths=PackedStringArray("parent_node", "range_component") instance=ExtResource("3_1rked")]
damage = 5.0
atk_speed = 0.8
parent_node = NodePath("..")
range_component = NodePath("RangeComponent")

[node name="RangeComponent" parent="AttackComponent" instance=ExtResource("4_gki7q")]
radius = 60.0

[node name="ShopSprite" type="Sprite2D" parent="."]
texture = ExtResource("5_csjfd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
sprite_frames = SubResource("SpriteFrames_gki7q")
animation = &"idleforward"

[node name="GunSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(-14, 3)
texture = ExtResource("7_xg0ro")
